# toolchains_gcc

./: .gitignore  ARM64_USAGE.md  FORK_USAGE.md  README.md
bazel/: MODULE.bazel  extentions.bzl  provider.bzl  rules.bzl
bazel/configs/host/gcc_12_2/: BUILD
bazel/test/: BUILD  MODULE.bazel  custom_features.bzl
bazel/toolchain/internal/: cc_toolchain_config.bzl  toolchain.BUILD
extensions/: gcc.bzl
extentions/: gcc.bzl
rules/: gcc.bzl
test/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE
test/coverage/: BUILD  MODULE.bazel  README.md  coverage.cpp  coverage.h  coverage_test.cpp  main.cpp
test/coverage/greeting/: BUILD  greeting.cpp  greeting.h
toolchain/internal/: cc_toolchain_config.bzl  toolchain.BUILD
