# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "score_toolchains_gcc_tests",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "score_toolchains_gcc", version = "0.2")
local_path_override(
    module_name = "score_toolchains_gcc",
    path = "../",
)

gcc = use_extension("@score_toolchains_gcc//extentions:gcc.bzl", "gcc")

# Use default toolchains - no configuration needed!
# The defaults already include x86_64 and aarch64 toolchains

# Add warning flags for both toolchains
gcc.warning_flags(
    name = "gcc_toolchain_x86_64",
    minimal_warnings = ["-Wall", "-Wno-error=deprecated-declarations"],
    strict_warnings = ["-Wextra", "-Wpedantic"],
    treat_warnings_as_errors = ["-Werror"],
)

gcc.warning_flags(
    name = "gcc_toolchain_aarch64",
    minimal_warnings = ["-Wall", "-Wno-error=deprecated-declarations"],
    strict_warnings = ["-Wextra", "-Wpedantic"],
    treat_warnings_as_errors = ["-Werror"],
)

# Enable extra features for both toolchains
gcc.extra_features(
    name = "gcc_toolchain_x86_64",
    features = [
        "minimal_warnings",
        "treat_warnings_as_errors",
    ],
)

gcc.extra_features(
    name = "gcc_toolchain_aarch64",
    features = [
        "minimal_warnings",
        "treat_warnings_as_errors",
    ],
)

use_repo(gcc, "gcc_toolchain_x86_64", "gcc_toolchain_aarch64")

# Register both toolchains
register_toolchains(
    "@gcc_toolchain_x86_64//:host_gcc_12",
    "@gcc_toolchain_aarch64//:host_gcc_12",
)
